# libMMD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  conanfile.txt.in  init.bat
cmake/: libMMDConfig.cmake.in  utlis.cmake
icu_data/: icu_contents.txt
include/: mmd_assets.h  vmd_animation.h
include/libMMD/: libmmd_assets.h  libmmd_assets_file.h  libmmd_conversion.h  libmmd_marco.h  libmmd_pmx.h  libmmd_vmd.h  libmmd_vpd.h  pmx_model.h  vmd_animation.h  vpd_post.h
libMMD/: CMakeLists.txt
libMMD/source/: CMakeLists.txt  pch.h
libMMD/source/MMD/: CMakeLists.txt
libMMD/source/MMD/private/: pmx.cpp  pmx_bone.cpp  pmx_display.cpp  pmx_joint.cpp  pmx_material.cpp  pmx_model_info.cpp  pmx_morph.cpp  pmx_polygon.cpp  pmx_rigid_body.cpp  pmx_texture.cpp  pmx_vertex.cpp  pmx_weight.cpp  vmd.cpp  vmd_Ik_controller.cpp  vmd_bone.cpp  vmd_camera.cpp  vmd_light.cpp  vmd_model_controller.cpp  vmd_morph.cpp  vmd_shadow.cpp  vpd_data.cpp
libMMD/source/MMD/public/: mmd_element.hpp  pmx.h  pmx_bone.h  pmx_display.h  pmx_element.hpp  pmx_joint.h  pmx_material.h  pmx_model_info.h  pmx_morph.h  pmx_polygon.h  pmx_rigid_body.h  pmx_texture.h  pmx_vertex.h  pmx_weight.h  vmd.h  vmd_Ik_controller.h  vmd_bone.h  vmd_camera.h  vmd_element.hpp  vmd_light.h  vmd_model_controller.h  vmd_morph.h  vmd_shadow.h  vpd_data.h
libMMD/source/assets/private/: pmx.cpp  pmx_display.cpp  pmx_joint.cpp  pmx_model_info.cpp  pmx_morph.cpp  pmx_rigid_body.cpp  pmx_texture.cpp  pmx_vertex.cpp  pmx_weight.cpp  vmd.cpp  vmd_IK_controller_impl.cpp  vmd_Ik_controller.cpp  vmd_bone.cpp  vmd_camera.cpp  vmd_interpolator.cpp  vmd_light.cpp  vmd_model_controller.cpp  vmd_morph.cpp  vmd_shadow.cpp  vpd_data.cpp
libMMD/source/assets/public/: file_element.hpp  file_element_array.hpp  pmx.h  pmx_bone.h  pmx_display.h  pmx_element.hpp  pmx_element_array.hpp  pmx_joint.h  pmx_material.h  pmx_model_description.h  pmx_model_info.h  pmx_morph.h  pmx_rigid_body.h  pmx_surface.h  pmx_texture.h  pmx_vertex.h  pmx_weight.h  vmd.h  vmd_IK_controller_impl.h  vmd_Ik_controller.h  vmd_bone.h  vmd_camera.h  vmd_element.hpp  vmd_interpolator.h  vmd_light.h  vmd_model_controller.h  vmd_morph.h  vmd_shadow.h  vpd.h  vpd_data.h  vpd_element.hpp
libMMD/source/core/: CMakeLists.txt
libMMD/source/core/private/: libmmd_code_conversion.cpp  libmmd_factory.cpp  libmmd_pmx_util.cpp
libMMD/source/core/public/: libmmd_code_conversion.h  libmmd_file.h  libmmd_logging.h  libmmd_marco.h  libmmd_type.h
libMMD/source/include/: mmd_assets.h  pmx_model.h  vmd_animation.h  vpd_post.h
source/: CMakeLists.txt  pch.h
source/assets/: CMakeLists.txt
source/assets/private/: mmd_assets_file.cpp  pmx.cpp  pmx_bone.cpp  pmx_display.cpp  pmx_joint.cpp  pmx_material.cpp  pmx_model_description.cpp  pmx_morph.cpp  pmx_rigid_body.cpp  pmx_surface.cpp  pmx_vertex.cpp  pmx_weight.cpp  vmd.cpp  vmd_IK_controller_impl.cpp  vmd_bone.cpp  vmd_camera.cpp  vmd_interpolator.cpp  vmd_light.cpp  vmd_model_controller.cpp  vmd_morph.cpp  vmd_shadow.cpp  vpd.cpp
source/assets/public/: file_element.hpp  mmd_assets_file.h  pmx.h  pmx_element.hpp  pmx_material.h  pmx_morph.h  pmx_texture.h  pmx_vertex.h  pmx_weight.h  vmd.h  vmd_bone.h  vmd_element.hpp  vmd_model_controller.h  vpd.h  vpd_element.hpp
source/core/: CMakeLists.txt
source/core/private/: libmmd_code_conversion.cpp  libmmd_conversion.cpp  libmmd_factory.cpp  libmmd_pmx_util.cpp
source/core/public/: libmmd_code_conversion.h  libmmd_file.h  libmmd_marco.h  libmmd_math.h  libmmd_pmx_util.h  libmmd_type.h
